# AWS-RAG

./: .gitignore  README.md  example_CHANGELOG.md  example_pyproject.toml  file.txt  pyproject.toml
Admin/: .env  Dockerfile  admin.py  requirements.txt
User/: app.py  config.py  get_answer.py  get_embedding.py  load_faiss_index.py  requirements.txt
