[tool.poetry]
name = "aws-rag"
version = "0.1.0"
description = "\"Internship project to build an AWS RAG system.\""
authors = ["\"TODO\""] # TODO Add your own email addresses
readme = "README.md"
package-mode = false # only use poetry for dep-management. No packaging.

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
pypdf = "^5.1.0"
langchain = "^0.3.13"
boto3 = "^1.35.91"
langchain-aws = "^0.2.10"
langchain-community = "^0.3.13"
python-docx = "^1.1.2"
faiss-cpu = "^1.9.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
